[package]
name = "octane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
blake3 = "1.3"
bytes = "1"
dashmap = "5.3"
derive_more = "0.99"
futures-util = "0.3"
meilisearch-sdk = "0.17"
mime_guess = "2.0"
parking_lot = "0.12"
rusqlite = { version = "0.27", features = ["bundled"] }
sanitize-filename = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["fs"] }
uuid = { version = "1.1", features = ["v4"] }
